gradient descent method added

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -1080,7 +1080,6 @@
     "    curr_point = np.array([v for k, v in init_val_dict.items()])\n",
     "    f_grad = f.gradient_at(init_val_dict)\n",
     "    f_hess = f.hessian_at(init_val_dict)\n",
-    "    history = [curr_point]\n",
     "    \n",
     "    for i in range(max_iter):\n",
     "        \n",
@@ -1090,38 +1089,56 @@
     "        f_hess = f.hessian_at(curr_val_dict)\n",
     "\n",
     "        step = np.linalg.solve(f_hess, -f_grad)\n",
-    "        print(step)\n",
     "        if np.linalg.norm(step, ord=2) < stop_stepsize: break\n",
     "        \n",
     "        # x := x + s\n",
     "        curr_point = curr_point + step\n",
-    "        history.append(curr_point)\n",
     "    \n",
-    "    return history"
+    "    return {var: val for var, val in zip(variables, curr_point)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gradient_descent(f,init_val_dict, learning_rate=0.1, max_iter=1000, stop_stepsize=0.000001):\n",
+    "    f_grad = f.gradient_at(init_val_dict)\n",
+    "    variables  = [var for var in init_val_dict.keys()]\n",
+    "    curr_point = np.array([v for k, v in init_val_dict.items()])\n",
+    "    \n",
+    "    \n",
+    "    for i in range(max_iter):\n",
+    "        \n",
+    "        prev_point =curr_point\n",
+    "        prev_val_dict = {var: val for var, val in zip(variables, prev_point)}\n",
+    "        f_grad =f.gradient_at(prev_val_dict)\n",
+    "\n",
+    "        curr_point =curr_point - learning_rate*f_grad\n",
+    "        if np.linalg.norm(curr_point-prev_point, ord=2) < stop_stepsize: break\n",
+    "        \n",
+    "    \n",
+    "    return {var: val for var, val in zip(variables, curr_point)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2. -2.]\n",
-      "[-0.  0.]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([-1,  2]), array([ 1.,  0.])]"
+       "{<__main__.Variable at 0x113c8d588>: 0.99999754800713458,\n",
+       " <__main__.Variable at 0x113c8d668>: 2.4519928653854235e-06}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1146,7 @@
    "source": [
     "x,y = Variable(),Variable()\n",
     "f= x**2-2*x+1+y**2\n",
-    "newton(f, {x: -1,y:2})"
+    "gradient_descent(f, {x: -1,y:2})"
    ]
   },
   {
@@ -1300,6 +1317,46 @@
    ],
    "source": [
     "a+np.linalg.solve(f_hess, -f_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  3.10503618e+231,   3.11109133e+231,   3.45845952e-323])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.empty(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dict1)"
    ]
   },
   {
