gradient descent method added

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
@@ -1134,11 +1134,11 @@
     {
      "data": {
       "text/plain": [
-       "{<__main__.Variable at 0x113c8d588>: 0.99999754800713458,\n",
-       " <__main__.Variable at 0x113c8d668>: 2.4519928653854235e-06}"
+       "{<__main__.Variable at 0x113ba0278>: 0.99999754800713458,\n",
+       " <__main__.Variable at 0x113ba06d8>: 2.4519928653854235e-06}"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,23 +1151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ting/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:278: RuntimeWarning: overflow encountered in power\n",
+      "/Users/ting/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:203: RuntimeWarning: invalid value encountered in double_scalars\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([ 2.,  4.])"
+       "{<__main__.Variable at 0x113ba0278>: nan,\n",
+       " <__main__.Variable at 0x113ba06d8>: nan}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f= x**2-2*x+1+y**2\n",
-    "f.gradient_at({x: 2,y:2})\n"
+    "f= 100.0*(y - x**2)**2 + (1 - x)**2.0\n",
+    "gradient_descent(f, {x:0,y:1})\n"
    ]
   },
   {
