learning_rate fixed

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2216,70 +2216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[-0.5, -7.0], [-0.5, -7.0]]"
+       "{<__main__.Variable at 0x1a1efa2940>: 0.72987095510663291,\n",
+       " <__main__.Variable at 0x1a1efa2208>: 0.27012904489336725}"
       ]
      },
-     "execution_count": 292,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXYAAAD8CAYAAABjAo9vAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAGW9JREFUeJzt3V+MHeV5x/HfkzXY2A44spGxMQ6J\nhBAWNAaviB3EnwJJSYLoH7UqVInUqtLeJCmkraJEvUjTi7YXUZRIlaJakKQREVECRK1IlJAomIBk\nA2vHxIDJfzCLAWNXxiHEuDhPL/bMMjuemTN/3nNmzsz3I63Ys2fOzOtl93eefeadd8zdBQDojrc0\nPQAAQFgEOwB0DMEOAB1DsANAxxDsANAxBDsAdEyQYDezj5vZk2b2hJndZWbLQuwXAFBe7WA3s3Ml\n/Z2kaXe/WNKUpJvr7hcAUE2oVswSSWeY2RJJyyUdDLRfAEBJS+ruwN2fN7PPSjog6XeS7nf3+5Pb\nmdmMpBlJWrFixZYLLryw7qEBoFf27tlz2N3PHrad1V1SwMzeJukeSX8p6aikb0q6293vzHrNpVu2\n+I6dj9Q6LgD0zaqlp+129+lh24VoxVwv6dfu/rK7/5+keyW9J8B+AQAVhAj2A5K2mtlyMzNJ10na\nH2C/AIAKage7uz8i6W5JeyTtG+xze939AgCqqX3yVJLc/dOSPh1iXwCAerjyFAA6hmAHgI4h2AGg\nYwh2AOgYgh0AOoZgB4COIdgBoGMIdgDoGIIdADqGYAeAjiHYAaBjCHYA6BiCHQA6hmAHgI4h2AGg\nY2oHu5ldaGZ7Yx/HzOy2EIMDAJRX+0Yb7v5TSZslycymJD0v6Vt19wsAqCZ0K+Y6Sb9092cD7xcA\nUFDoYL9Z0l2B9wkAKCFYsJvZ6ZJukvTNjOdnzGzWzGaPHD4c6rAAgISQFfv7Je1x95fSnnT37e4+\n7e7Tq9esCXhYAEBcyGC/RbRhAKBxQYLdzJZLeq+ke0PsDwBQXe3pjpLk7q9JWh1iXwCAerjyFAA6\nhmAHgI4h2AGgYwh2AOgYgh0AOoZgB4COIdgBoGMIdgDoGIIdADqGYAeAjiHYAaBjCHYA6BiCHQA6\nhmAHgI4h2AGgYwh2AOiYUHdQWmVmd5vZ02a238y2hdgvAKC8IHdQkvQFSd919z83s9MlLQ+0XwBA\nSbWD3czOlHSVpL+WJHc/IelE3f0CAKoJ0Yp5p6SXJX3ZzH5sZreb2YrkRmY2Y2azZjZ75PDhAIcF\nAKQJEexLJF0m6Yvufqmk30r6ZHIjd9/u7tPuPr16zZoAhwUApAkR7HOS5tz9kcHjuzUf9ACABtQO\ndnd/UdJzZnbh4EvXSXqq7n4BANWEmhXzMUlfG8yI+ZWkvwm0XwBASUGC3d33SpoOsa82eOn4qwuf\nr122ssGRAEB5XHma8NLxVzVl0pS9+Tge9ADQdgR7TBTqkWTAA8AkINgHkqEeR7gDmCQEu/JDPTLs\neQBoC4K9hCmjagfQfr0P9iLVetprAKCteh/sZdGSAdB2vQ72OpU3VTuAtup1sEvVKnCqdgBt1vtg\nr4OqHUAbhVorZuJknTTde2QudfvNqzcsejxl0kkfxcgAoB4q9hRLp5Ys+pCyA5+qHUDbEOwxWeGd\nFe702gG0US+DPa3KjkI7CvGkvMqdqh1Am/Qy2KX0ajsr1POep2oH0DZBgt3MnjGzfWa218xmQ+xz\nnLJaMGmWTi2hagfQaiEr9j90983uPpE33BhWrSfFw52qHUCb9G66Y5m1YR48+OatW69ev2nh86VT\nS/T6yTdCDw0AgghVsbuk+81st5nNpG1gZjNmNmtms0cOHw502PrS2ioPHnxqIdRXnb5s4WvDXks7\nBkAbhAr2K9z9Mknvl/QRM7squYG7b3f3aXefXr1mTaDDhhFvw8QDPQr1tHBPtm5oxwBoiyDB7u4H\nB/89JOlbki4Psd+mREGe9rVk5U7VDqBtage7ma0ws7dGn0t6n6Qn6u53HJKhnNZuiUsGPlU7gDYK\nUbGvlfSwmT0u6VFJ33b37wbYb3BpJ06T4ZxWrSefH1a1A0CTas+KcfdfSXpXgLE0ali1nrb91es3\nnTJDJrp93tplK0MPEQAK6d10xzzJan3ngV0Ln2/buHXRdkdPHB/buACgjN4uKTBMFOrrlp+16HFc\nvMqnHQOgLXob7PEgTrZhkqG+bvlZWrf8LO08sGvhuXh1n3YSldkxAJrS22CXFgdysg0Thfqwr1G1\nA2ib3gR70Qo6reWStU1e1V7mmAAQUm+CXSo+zzytMi/yXJVjAUBovQr2kOJVO+0YAG1CsMektWEe\n2rdDD+3bsehrWVU7J1EBtEHvg/3Bg08t6pVnhXYy3KXFbwRU7QDaopcXKO09MlfoxhoP7duht595\nzqLHknTlJddo3fKz9MJrr0hafMFS2lrtXIkKYJx6X7GXEQ/5yLBZNJxEBTBuBHuGZLWefE5a3Lbh\nJCqAtuhFsJe5Hd4wRap25rQDaFIvgn0U0qp2KX2VSNoxAMaJYE+R14aR0qt26dRlCWjHAGhCsGA3\nsykz+7GZ3Rdqn+O088CuwleVRuJTIIe1Y5jTDmBcQlbst0raH3B/rRav2ou0YwBgXIIEu5ltkPRB\nSbeH2N8kSV64lFwYjJtdAxi3UBX75yV9QtLvszYwsxkzmzWz2SOHDwc6bLOSVTtz2gG0Qe1gN7Mb\nJR1y991527n7dnefdvfp1WvW1D1sY3bN5v4zF9COAdCUEBX7FZJuMrNnJH1d0rVmdmeA/bZOVqjT\njgHQJrWD3d0/5e4b3P18STdL+qG7f6j2yFomK9STUx9pxwBoGvPYB7Zt3LqwqFeWC84+X1J2yDM7\nBkAbBA12d9/h7jeG3GfbROE+TF47hjntAEaJij3Ds8deLLzt2888J/diJQAYJ4I9xZWXXJP69Z+/\n/MzQ1+a1YziJCmAcCPaCtk5vKf2aZDsmjpOoAEaFYA8o7fZ5ADBuBLu0cFu7OvKuQs1qx3ASFcAo\n9DLYN6/esHBf0qvXb1r0XDTl8cpLrjnlBOrW6S36+cvPlGrL5LVjAGAUehnsWbZt3Dp0myq99mGo\n2gGERLCPUNa0x2Q7BgBC6kWwr122Uie9/OvS2jFFZd3oOqsdQ9UOIJReBHsR8ROow5YWCI2qHUBI\nBLsWn0BN67MXrdqTV6BmSVvxEQBC6W2wx2fG5Mm6CrWseDsmDVMfAYTS22DPk7bSY9Vee966MVTt\nAEaBYB+4ev2mzAuVoqq9bLgn142J4yQqgFHpVbCXnRkTr9qLtGSePfbi0O2GtWMAoK4Q9zxdZmaP\nmtnjZvakmX0mxMBCW7ts5SlfS+uzR1V71sVKVVsy0uKrUCNp7RiqdgB1hKjYX5d0rbu/S9JmSTeY\n2fBLOFsoubyAlF61P3vsxVoBH0lrx1C1A6ir9uIl7u6SohLztMFHhcuB2mfbxq2nnPyMwv2hfTuC\nhHuWl46/mvpXBgAME6THbmZTZrZX0iFJ33f3R1K2mTGzWTObPXL4cIjDBhNvxyRPombdCzXeS7/y\nkmsWPoqI99nT5rRTtQOoI0iwu/tJd98saYOky83s4pRttrv7tLtPr16zJsRhS0tbWmDz6g2FXpsV\n7mXnuaf12bPQawdQReibWR+VtEPSDSH3Ow7Dqnap+lIDRe6BStUOIJQQs2LONrNVg8/PkHS9pKfr\n7necsqr2tHCvYthr89Zpp2oHUFaIin2dpAfM7CeSHtN8j/2+APsdmaz57MmqPSnqt9ddJGzY8gIR\nqnYAVdQOdnf/ibtf6u5/4O4Xu/u/hBjYqGTNNClStUv12zJ5spYYoGoHUEavrjwtIq1qH0e4Z7Vj\nqNoBlNXLYM+68UZa1Z7WkpEWh3tWwL/w2iule/NU7QDq4u7KKV4/+caiCvrq9Zv04MGnTpmqGIX2\nzgO7glTvS6eWpC4lPGXl17kB0F+9DvaTfmqrY/PqDZlV89ETx1PnodeZMVNUtF47V6MCGKaXrRgp\n+ySqlL44WFa/vaq8mTF567TTkgEwTG+DPZLX4hh1uKfJm9POiVQARfQ62IdV7VIz4S5RtQOortfB\nHsmq2rPmtl+9ftPCsgOjCHiqdgB19D7Yi5yMzLrpdZ3qvc4bAje+BpCn98EuZc9rl7JbMpF4uJcN\n66w58lL6cr5JhDuANAR7TJ1wLxPwIdo3UUuGcAeQRLAPDGvJDAt3KT3gkyEePc6r1uPyqnb67QDS\nEOwxeS0ZqVi4S28GfFbIFw31vJOoEfrtAJJ6feVplrQrUiPRlanJZQeyFA3xPHuPzA290xNXpQKI\nULEnROE4rHKPrk4dVr3XVbRql6jcAcwLcQel88zsATPbb2ZPmtmtIQbWpCLhLhVvzYwD4Q4gEqJi\nf0PSP7j7RZK2SvqImdXvPzSsTeFeZOqjRLgDmBfiDkovuPuewee/kbRf0rl199sGRXvW8XBvunon\n3AEE7bGb2fmSLpX0SMpzM2Y2a2azRw4fDnnYkRo2UyYS9d2l0VXvRap2iXAH+i5YsJvZSkn3SLrN\n3Y8ln3f37e4+7e7Tq9esCXXYsYjCvUzAh67ei5xEjSPcgf4KEuxmdprmQ/1r7n5viH22TdGee6QN\n7RnCHeinELNiTNIdkva7++fqD6m9qoR7yIAvehI1jnAH+idExX6FpA9LutbM9g4+PhBgv61UNtyl\n8AFfFuEO9EvtK0/d/WFJvVq1ZO2ylXrp+Ku5V6imicI9unJVKt87ryq6ITZXqALdx5WnFVWp3CNp\nFXyZKr5sOyYyZW+uLUP1DnQXa8XUEIV7FJJlV1uMr/9Spooftm7MMFTvQLcR7AFUbc3EJUM+Lgr6\nkL35eLhLxS/GAtB+BHsgIcI9kqzI40Fft1qPi8ZJ9Q50C8EeUN3WTJaQYZ4mOWuGgAcmGydPR6DO\nidUmxQOek6vA5CLYRyQe7pMU8NHMGYmAByYVwT5Ca5etnOjqnYAHJhM99jGIn1iVJusm1PGxxsOd\nPjzQXlTsYzLJ1XuEKh6YDFTsYzbJ1XuEKh5oN4K9AfFpkSHmvTcpORc+QsgDzSHYGzSqee9NiI+d\nkAeaRY+9BSa9954U9eKT/Xh68sB4ULG3RJPVe3JtmlEsWxBJhjvVPBBekGA3sy9JulHSIXe/OMQ+\n+2pcJ1ezFhpLey4uxMqScQQ9EF6oiv0rkv5D0lcD7a/XxnVyNWt54Lxlg7NCv2rg5/XmJYIeqCJI\nsLv7j8zs/BD7wptGWb1vXr1Be4/Mlb6DU9r2r598IzXwy4Z92r8vrS9P2AP5xtZjN7MZSTOSdN7G\njeM67MSbhKmRWW8OIar75L+Xqh4YztzDTMUYVOz3FemxX7pli+/Y+UiQ4/ZJPNBCBXyVqr2OvJuF\nVG3npM0mIuzRRauWnrbb3aeHbcesmAkyqur99ZNvjC3cs45Tp51DCwdYjGCfQCF771GvfZzhnqZs\nO0fKD/2iYS8R+OieUNMd75J0jaQ1ZjYn6dPufkeIfSNdyOq9LeGepmyFL2UHftr3KK1nLxH2mGyh\nZsXcEmI/KC9U9T7qcH/w4FOFt716/aah24QK/KzvV95VsoQ+2q5d5RkqCVW9hwz3tCBfdfqyyq/N\nknwTCDUHP+t7SIWPSUCwd0iIZQlChnvRIK/zuiJvAlH4h+jjl2nnRAh9jBvB3kHx9kwT4V6m4q5r\n2JvA0RPHh44nr/VTJPTzvsd5oU/gY1QI9o6qW7237YTqzgO7Cm+7bePWhc/rBn9W6Of18qXhoU/g\nY5SCXaBUBhcojVfdC5uiACsT8A8efKpyKyYtxNctP6vQa1947ZXSx4u/ESQdPXE897VpwV/3Iqy8\n5ZsJ/X7jAiUsqHtytWr1fvTE8dLhHoV60SBPqvK6In8NpIV/lWqfKh/jQMXeQ1XbM/FQKhLwUeiV\nCfedB3ZVDvUsD+3bsejxlZdcU3ofw/4SSAZ/2Uq/TpVPhd8fRSt2gr2n6rRnyrRm4hVtkYCvGuzJ\n8I57+5nnLHr87LEXS+9fyn5DCBn6ZVo7ddo6BP5kIthRyLgDfli4V23FPLRvxykBHtqwN4S04M8L\n/TqBT4XfTwQ7ShlHe6ZM9V4m4KNqfdTBPkxe8JcJ/aKBP47qnqBvF4IdlbQp4OMnNYcFfFvCPUta\n6Jdp7RQJ+7ypmUlFl0gm7NuFYEctkxjw8T57nYDfNbu78mu3Tm8ptF1WdV+0ss+apZM0jrAn6MeH\nYEcQVXvweTfLTkpOGcwK+eS0xKyQT55ILRvyw4L9grPPX/j85y8/c8rzRcM9KQr7YbN24kFfdA7+\nsIXV4kFf9oYn8aAn5EeLYEdQIU6ySqOp4qXilbwUpl0TD/+qQZ6lLQEvlQt5KvnRI9gxEskLZEZV\nxUvVK3mpeDUf14b+fLxFU3S+fRTweeEeOXrieKFlkaX5kK97u0LCPayxBruZ3SDpC5KmJN3u7v+e\ntz3B3g2hqnipfMhL5YJeKlfVZwkV/mVn0KQpE+jSm5X7OIJdmg93gj2ssQW7mU1J+pmk90qak/SY\npFvcPfNaa4K9e0KtRxMJGfTS8GUDykyrDKXMFbBFp0amKdOKiUQtmbrBLhHuIY0z2LdJ+md3/6PB\n409Jkrv/W9ZrCPZuq9OukdLXUyl7lWtc0TnzZdVZ+iD0YmVSufnuaer01yOcSB2tcS4Cdq6k52KP\n5yS9O8B+MaHiv9Dx2/ZJxUI+LVCyFs+KB35WgA1bj/2iczZXWomy6htCpGgLJTJs/RmpeohL1atz\nTpq2T4hgT/tVPeXPADObkTQjSedt3BjgsJgEyV/yqtV8VthnXWlZJPDjqtwc5KJzNpd+TVyRoE6q\nE9xxoUI8Qpi3S4hgn5N0XuzxBkkHkxu5+3ZJ26X5VkyA42ICDQv6SNXKPpK3PG7S0qklhQOzKVFQ\nDwvsuBD98TSEePuFCPbHJF1gZu+Q9LykmyX9VYD9ogfSQiLZvomU6dWXCbUybwJNqRPSSXmhHSG8\nJ1vtYHf3N8zso5K+p/npjl9y9ydrjwy9lRUqeTeMjqtyI5FJVSSk0xDc3RbkDkru/h1J3wmxLyBL\n0TAq+gaQVGWaZlVVAzmJgEYabo2HzqkadlXfEKogkDFKBDswQNiiK97S9AAAAGER7ADQMQQ7AHQM\nwQ4AHUOwA0DHEOwA0DEEOwB0DMEOAB1DsANAxxDsANAxBDsAdAzBDgAdQ7ADQMcQ7ADQMbWC3cz+\nwsyeNLPfm9l0qEEBAKqrW7E/IenPJP0owFgAAAHUutGGu++XJLMx3lMMAJBrbHdQMrMZSTODh6+v\nWnraE+M6dkFrJB1uehAJbRyT1M5xMaZiGFNxbRzXhUU2GhrsZvYDSeekPPVP7v7fRUfj7tslbR/s\nc9bdW9WTZ0zFtXFcjKkYxlRcG8dlZrNFthsa7O5+ff3hAADGhemOANAxdac7/qmZzUnaJunbZva9\ngi/dXue4I8KYimvjuBhTMYypuDaOq9CYzN1HPRAAwBjRigGAjiHYAaBjGgv2Ni1HYGY3mNlPzewX\nZvbJJscyGM+XzOyQmbVmrr+ZnWdmD5jZ/sH/t1tbMKZlZvaomT0+GNNnmh5TxMymzOzHZnZf02OJ\nmNkzZrbPzPYWnTY3ama2yszuNrOnBz9b2xoez4WD70/0cczMbmtyTINxfXzwM/6Emd1lZstyt2+q\nx25mF0n6vaT/lPSP7t7ID5qZTUn6maT3SpqT9JikW9z9qSbGMxjTVZJelfRVd7+4qXHEmdk6Sevc\nfY+ZvVXSbkl/0vD3ySStcPdXzew0SQ9LutXddzU1poiZ/b2kaUlnuvuNTY9Hmg92SdPu3pqLbszs\nvyQ95O63m9npkpa7+9GmxyUtZMPzkt7t7s82OI5zNf+zvcndf2dm35D0HXf/StZrGqvY3X2/u/+0\nqePHXC7pF+7+K3c/Ienrkv64yQG5+48k/W+TY0hy9xfcfc/g899I2i/p3IbH5O7+6uDhaYOPxmcD\nmNkGSR+UdHvTY2kzMztT0lWS7pAkdz/RllAfuE7SL5sM9Zglks4wsyWSlks6mLcxPfb5cHou9nhO\nDQdW25nZ+ZIulfRIsyNZaHnslXRI0vfdvfExSfq8pE9o/i/SNnFJ95vZ7sESH017p6SXJX150La6\n3cxWND2omJsl3dX0INz9eUmflXRA0guSXnH3+/NeM9JgN7MfDHpCyY9GK+KEtBXMGq/62srMVkq6\nR9Jt7n6s6fG4+0l33yxpg6TLzazR1pWZ3SjpkLvvbnIcGa5w98skvV/SRwYtvyYtkXSZpC+6+6WS\nfiup8XNckjRoC90k6ZstGMvbNN9FeIek9ZJWmNmH8l4z0kXAJmQ5gjlJ58Ueb9CQP3P6atDHvkfS\n19z93qbHE+fuR81sh6QbNL+cdFOukHSTmX1A0jJJZ5rZne6e+4s4Du5+cPDfQ2b2Lc23IZtccntO\n0lzsr6y71ZJg1/yb3x53f6npgUi6XtKv3f1lSTKzeyW9R9KdWS+gFTN/svQCM3vH4F36Zkn/0/CY\nWmdwovIOSfvd/XNNj0eSzOxsM1s1+PwMzf8CPN3kmNz9U+6+wd3P1/zP0g/bEOpmtmJw0luDdsf7\n1OwboNz9RUnPmVm0YuF1kho7GZ9wi1rQhhk4IGmrmS0f/B5ep/lzXJmanO5YdTmCoNz9DUkflfQ9\nzX+zvuHuTzYxloiZ3SVpp6QLzWzOzP62yfEMXCHpw5KujU0F+0DDY1on6QEz+4nm36C/7+6tmV7Y\nMmslPWxmj0t6VNK33f27DY9Jkj4m6WuD/4ebJf1rw+ORmS3X/Cy5VvxVOviL5m5JeyTt03xu5y4t\nwJICANAxtGIAoGMIdgDoGIIdADqGYAeAjiHYAaBjCHYA6BiCHQA65v8BwcMshnOiUFAAAAAASUVO\nRK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a1ed57b70>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "x,y = Variable(),Variable()\n",
-    "f= exp(-(x*x*y*y+x*x+y*y-8*x-8*y)/2.)\n",
-    "plot_range=[-1,8]\n",
-    "a=gradient_descent(f, {x: -0.5,y:-7},return_history=True)\n",
-    "xx=np.linspace(plot_range[0],plot_range[1],100)\n",
-    "yy=np.linspace(plot_range[0],plot_range[1],100)\n",
-    "xg,yg = np.meshgrid(xx,yy)\n",
-    "z=np.zeros(shape=(len(xg.ravel()),))\n",
-    "for i,val in enumerate(xg.ravel()):\n",
-    "    vals = yg.ravel()\n",
-    "    z[i]=f.evaluation_at({x:val,y:vals[i]})\n",
-    "z2 = z.reshape(xg.shape)\n",
-    "plt.contourf(xg,yg,z2,alpha=0.8, cmap=\"BuGn\")\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[-2, -2],\n",
-       " [-1.997502081598668, 3.9900083263946717],\n",
-       " [0.9962640215968228, -7.970093479914039],\n",
-       " [0.9962661046310918, 0.99254615123247],\n",
-       " [0.9999999999967593, 0.9999860580189168],\n",
-       " [0.999999999999991, 0.999999999999982]]"
-      ]
-     },
-     "execution_count": 276,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "x, y = Variable(), Variable()\n",
+    "f= x**2-2*x+1+y**2\n",
+    "gradient_descent(f,{x: -1.0, y: 2.0},learning_rate=0.001)"
    ]
   },
   {
