--- a/code_explore/VectorFunction.ipynb
+++ b/code_explore/VectorFunction.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import autodiff.forward\n",
+    "import autodiff.backprop as bp\n",
     "from autodiff.forward import *\n",
     "\n",
     "import numpy as np\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,15 @@
     "    \n",
     "    def jacobian_at(self, val_dict):\n",
     "        return np.array([[f.derivative_at(var, val_dict) for var in val_dict.keys()]\n",
-    "                         for f in self._exprlist])"
+    "                         for f in self._exprlist])\n",
+    "    def backward_at(self, val_dict):\n",
+    "        result = []\n",
+    "        for f in self._exprlist:\n",
+    "            bp.back_propagation(f,val_dict)\n",
+    "            result.append([var.bder for var in val_dict.keys()])\n",
+    "            # clear backder output for the next round of calculation\n",
+    "            bp.initialize(f,f)\n",
+    "        return np.array(result)"
    ]
   },
   {
@@ -43,13 +52,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = Variable(), Variable()\n",
     "f, g = sin(x+y), cos(x-y)\n",
     "h = VectorFunction([f, g])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(x,Expression)"
    ]
   },
   {
@@ -62,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +100,7 @@
        "array([0.8660254, 1.       ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +151,7 @@
        "       [-0. ,  0. ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,26 +162,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5, 0.5],\n",
+       "       [0. , 0. ]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.backward_at({x: np.pi/6, y: np.pi/6})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def newton_multivariable(vectorfunction, init_val_dict, tol, max_itr, verbose):\n",
+    "def newton_multivariable(vectorfunction, init_val_dict, tol, max_itr, verbose,method = \"forward\"):\n",
     "    \n",
     "    itr = 1\n",
     "    val_dict = init_val_dict.copy()\n",
-    "    \n",
     "    while True:\n",
-    "        \n",
     "        evalvector = vectorfunction.evaluation_at(val_dict)\n",
-    "        jacobian   = vectorfunction.jacobian_at(val_dict)\n",
+    "        if method == \"forward\":\n",
+    "            jacobian   = vectorfunction.jacobian_at(val_dict)\n",
+    "        else:\n",
+    "            jacobian = vectorfunction.backward_at(val_dict)\n",
     "        dx = np.dot( pinv(jacobian), evalvector )\n",
-    "        \n",
+    "\n",
     "        for i, v in enumerate( val_dict.keys() ):\n",
     "            val_dict[v] = val_dict[v] - dx[i]\n",
-    "        \n",
+    "\n",
     "        if verbose: print(\"iteration {0}, at {1}, objective function = {2}\".format( \\\n",
-    "                          itr, list(val_dict.values()), vectorfunction.evaluation_at(val_dict)))\n",
+    "                            itr, list(val_dict.values()), vectorfunction.evaluation_at(val_dict)))\n",
     "\n",
     "        if norm(vectorfunction.evaluation_at(val_dict), ord=2) <= tol:\n",
     "            print(\"Found solution after {} iterations.\".format(itr))\n",
@@ -162,9 +213,8 @@
     "        if itr > max_itr:\n",
     "            print(\"Exceeded allowable max iterations without finding a root.\")\n",
     "            break\n",
-    "        \n",
+    "\n",
     "        itr += 1\n",
-    "        \n",
     "    return val_dict"
    ]
   },
@@ -183,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 1, at [-3.208452031970579, -3.208452031970579], objective function = [-0.93095617  0.        ]\n",
-      "iteration 2, at [-4.0829379871543505, -4.0829379871543505], objective function = [0.21964977 0.        ]\n",
+      "iteration 1, at [-3.208452031970577, -3.2084520319705776], objective function = [-9.30956167e-01 -3.55271368e-15]\n",
+      "iteration 2, at [-4.082937987154352, -4.082937987154352], objective function = [0.21964977 0.        ]\n",
       "iteration 3, at [-3.9257142101932674, -3.9257142101932674], objective function = [-0.00180539  0.        ]\n",
       "iteration 4, at [-3.926990817680748, -3.926990817680748], objective function = [9.80766024e-10 0.00000000e+00]\n",
       "Found solution after 4 iterations.\n",
@@ -203,7 +253,75 @@
     "entry1 = cos(x) + sin(y)\n",
     "entry2 = x**2 - y**2\n",
     "vector = VectorFunction([entry1, entry2])\n",
+    "val_dict = {x: np.pi/6, y: np.pi/6}\n",
     "root = newton_multivariable(vector, {x: np.pi/6, y: np.pi/6}, 1e-6, 25, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.5       ,  0.8660254 ],\n",
+       "       [ 1.04719755, -1.04719755]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector.jacobian_at(val_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.5       ,  0.8660254 ],\n",
+       "       [ 1.04719755, -1.04719755]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector.backward_at(val_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 1, at [-3.208452031970577, -3.2084520319705776], objective function = [-9.30956167e-01 -3.55271368e-15]\n",
+      "iteration 2, at [-4.082937987154352, -4.082937987154352], objective function = [0.21964977 0.        ]\n",
+      "iteration 3, at [-3.9257142101932674, -3.9257142101932674], objective function = [-0.00180539  0.        ]\n",
+      "iteration 4, at [-3.926990817680748, -3.926990817680748], objective function = [9.80766024e-10 0.00000000e+00]\n",
+      "Found solution after 4 iterations.\n",
+      "There is a root at [-3.926990817680748, -3.926990817680748].\n"
+     ]
+    }
+   ],
+   "source": [
+    "entry1 = cos(x) + sin(y)\n",
+    "entry2 = x**2 - y**2\n",
+    "vector = VectorFunction([entry1, entry2])\n",
+    "root = newton_multivariable(vector,{x: np.pi/6, y: np.pi/6}, 1e-6, 25, verbose=True,method = \"Backward\")"
    ]
   },
   {
@@ -215,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -224,18 +342,18 @@
        "9.807660239502525e-10"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.cos(root[x]) + np.sin(root[y])"
+    "np.cos(root[x])  + np.sin(root[y])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +362,7 @@
        "0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,6 +370,20 @@
    "source": [
     "root[x]**2 - root[y]**2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -270,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
