--- a/code_explore/Additional test case.ipynb
+++ b/code_explore/Additional test case.ipynb
@@ -26,58 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = fw.Variable()\n",
-    "val_dict = {b:2}\n",
-    "c = fw.exp(b)\n",
-    "bp.back_propagation(c,val_dict)\n",
-    "b."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.35212222801502e-08\n",
-      "2.35212222801502e-08\n",
-      "\n",
-      "\n",
-      "1.9601018566791832e-09\n",
-      "5.328109258939859e-09\n",
-      "\n",
-      "\n",
-      "1.9601018566791832e-09\n",
-      "1.9601018566791832e-09\n",
-      "\n",
-      "\n",
-      "1.9601018566791832e-09\n",
-      "1.9601018566791832e-09\n",
-      "\n",
-      "\n",
-      "1.9601018566791832e-09\n",
-      "1.9601018566791832e-09\n",
-      "\n",
-      "\n",
-      "-0.9999999990199491\n",
-      "-0.9999999990199491\n",
-      "\n",
-      "\n",
-      "-1\n",
-      "-1.0\n",
-      "\n",
-      "\n",
-      "1\n",
-      "1.0\n",
-      "\n",
-      "\n",
       "Passed\n"
      ]
     }
@@ -85,49 +40,14 @@
    "source": [
     "a = fw.Variable()\n",
     "b = fw.Variable()\n",
-    "c = fw.power(a,3)\n",
-    "d = fw.exp(b)\n",
-    "e = c+d\n",
-    "f = fw.coth(e)\n",
-    "g = fw.log(f)\n",
-    "h = -g\n",
+    "c = a/b\n",
     "val_dict = {b:1,a:2}\n",
-    "bp.back_propagation(h,val_dict)\n",
-    "var_list = [a,b,c,d,e,f,g,h]\n",
+    "bp.back_propagation(c,val_dict)\n",
+    "var_list = [a,b,c]\n",
     "for i in var_list:\n",
-    "    print(i.bder)\n",
-    "    print(h.derivative_at(i,val_dict))\n",
-    "    print(\"\\n\")\n",
-    "    #assert(equals(i.bder, h.derivative_at(i,val_dict)))\n",
+    "    assert(equals(i.bder, c.derivative_at(i,val_dict)))\n",
     "print('Passed')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-9.800509288198415e-10"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h.val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -135,6 +55,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
