--- a/docs/source/Background.ipynb
+++ b/docs/source/Background.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Background\n",
+    "\n",
     "**Mathematical Background**\n",
     "\n",
     "Automatic Differentiation decomposes a complex function into a sequence of operations on elementary functions, evaluates the derivatives at each intermediate stage, repeatedly applies the chain rule to obtain the derivative of the outermost function.\n",
@@ -14,20 +16,22 @@
     "The class of functions consisting of the polynomials, the exponential functions, the logarithmic functions, the trigonometric functions, the inverse trigonometric functions,and the functions obtained from those listed by the four arithmetic operations and by superposition(i.e. composition),applied by finitely many times.\n",
     "\n",
     "**Chain Rule**\n",
-    "+ Used to compute the derivative of a composite function\n",
-    "+ Core of automatic differentiation\n",
+    " - Used to compute the derivative of a composite function\n",
+    " - Core of automatic differentiation\n",
     "\n",
     "For the first derivative:\n",
+    "\n",
     "$$\n",
     "\\dfrac{dy}{dx} = \\dfrac{dy}{du}\\cdot\\dfrac{du}{dx}\n",
     "$$\n",
+    "\n",
     "For the second derivative:\n",
-    "$$\n",
-    "\\dfrac{\\partial^2 t}{\\partial x_i \\partial x_j} = \\sum_k(\\dfrac{\\partial y}{\\partial u_k}\\dfrac{u_k^2}{\\partial x_i \\partial x_j}) + \\sum_{k,l}(\\dfrac{\\partial^2 y}{\\partial u_k \\partial u_l}\\dfrac{\\partial u_k}{\\partial x_i}\\dfrac{\\partial u_l}{\\partial x_j})\n",
-    "$$\n",
+    "\n",
+    "$$\\dfrac{\\partial^2 t}{\\partial x_i \\partial x_j} = \\sum_k(\\dfrac{\\partial y}{\\partial u_k}\\dfrac{u_k^2}{\\partial x_i \\partial x_j}) + \\sum_{k,l}(\\dfrac{\\partial^2 y}{\\partial u_k \\partial u_l}\\dfrac{\\partial u_k}{\\partial x_i}\\dfrac{\\partial u_l}{\\partial x_j})$$\n",
+    "\n",
     "**Topological Graph**\n",
-    "+ Each node represent a variable\n",
-    "+ Arrows indicate topological orders(order of operations) and operations themselves.\n",
+    " - Each node represent a variable\n",
+    " - Arrows indicate topological orders(order of operations) and operations themselves.\n",
     "\n",
     "\n",
     "**Forward Mode Autodifferentiation**\n",
@@ -40,14 +44,19 @@
     "\n",
     "Has forward computation and backward computation\n",
     "\n",
-    "    **Forward Computation**\n",
+    "    Step 1: Forward Computation\n",
+    "    \n",
     "Follow the topological order and store the values of each variable in each nodes.\n",
     "    \n",
     "    \n",
-    "    **Backward Computation**\n",
+    "    Step 2: Backward Computation\n",
+    "    \n",
     "let y denote our final output variable and $u_j$, $v_j$ denote the intermediate variables\n",
+    "\n",
     "1. Initialize all partial derivative $\\dfrac{dy}{du_j}$ to 0 and dy/dy = 1\n",
-    "2. visit each node in reverse topological order. For variable $u_i=g_i(v_1,...,v_n)$ we already know $\\dfrac{dy}{du_i}$, increment $\\dfrac{dy}{dv_j}$ by $\\dfrac{dy}{du_i}\\dfrac{du_i}{dv_j}$"
+    "\n",
+    "2. visit each node in reverse topological order. For variable $u_i=g_i(v_1,...,v_n)$ we already know $\\dfrac{dy}\n",
+    "    {du_i}$, increment $\\dfrac{dy}{dv_j}$ by $\\dfrac{dy}{du_i}\\dfrac{du_i}{dv_j}$"
    ]
   }
  ],
