update backprop example

--- a/autodiff/Backprop_example.ipynb
+++ b/autodiff/Backprop_example.ipynb
@@ -10,7 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from autodiff.backprop import *\n",
-    "from autodiff.forward import *"
+    "from autodiff.forward import *\n",
+    "from autodiff.rootfinding import *"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +78,36 @@
    "metadata": {},
    "source": [
     "Back propagation is also integrated with the function Newton's"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_d=newton_scalar(f,{x:1,y:-1},max_itr = 25,method = 'backward')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 0.0\n",
+      "y: -1.6420926159343308\n",
+      "function value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('x:',result_D[x])\n",
+    "print('y:',result_D[y])\n",
+    "print('function value:',abs(f.evaluation_at({x:result_d[x],y:result_d[y]})))"
    ]
   }
  ],
