Read the docs updates

--- a/docs/source/Getting Started.ipynb
+++ b/docs/source/Getting Started.ipynb
@@ -2,90 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Table of Content\n",
-    "* [How to use the package](#How to use the package)\n",
-    "    * [Installing autodiff](#Installing-autodiff)\n",
-    "    * [Getting Started](#Getting-Started)\n",
-    "* [Software Organization](#Software-Organization)\n",
-    "    * [Directory Structure](#Directory-Structure)\n",
-    "    * [Modules](#Modules)\n",
-    "    * [Test Automation](Test-Automation)\n",
-    "    * [Distribution](Distribution)\n",
-    "* [Implementation Details](#Implementation-Details)\n",
-    "    * [High-level Design](#High-level-Design)\n",
-    "    * [Core Classes](#Core-Classes)\n",
-    "    * [External Dependencies](#External-Dependencies)\n",
-    "* [Proposal for Additional Features](#Proposal-for-Additional-Features)\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "## How to use the package"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installing `autodiff`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "the easiest way to install `autodiff` is by `pip`. Just type in `pip install DYFS-autodiff` in the command line."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: DFYS-autodiff in /Users/chenfeiyu/anaconda3/lib/python3.6/site-packages (0.0.0)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install DFYS-autodiff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or, the user can choose to install `autodiff` directly from the source in this repository. We suppose that the user has already installed `pip` and `virtualenv`:\n",
-    "1. clone the project repo by `git clone git@github.com:D-F-Y-S/cs207-FinalProject.git`\n",
-    "2. `cd` into the local repo and create a virtual environment by `virtualenv env` \n",
-    "3. activate the virtual environment by `source env/bin/activate` (use `deactivate` to deactivate the virtual environment later.)\n",
-    "4. install the dependencies by `pip install -r requirements.txt`\n",
-    "5. install `autodiff` by `pip install -e .`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "### Getting Started"
+    "# Getting Started"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Univariate Functions"
+    "## Univariate Functions"
    ]
   },
   {
@@ -278,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multivariate Functions"
+    "## Multivariate Functions"
    ]
   },
   {
@@ -563,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Vector Functions"
+    "## Vector Functions"
    ]
   },
   {
@@ -650,237 +578,6 @@
    ],
    "source": [
     "h.jacobian_at({x: 1.0, y: -1.0})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "## Software Organization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Directory Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The structure of `autodiff`'s project directory is as follows. \n",
-    "```\n",
-    "autodiff/\n",
-    "\n",
-    "    __init__.py\n",
-    "    forward.py\n",
-    "    backward.py\n",
-    "    optimize.py\n",
-    "    rootfinding.py\n",
-    "    plot.py\n",
-    "    \n",
-    "tests/\n",
-    "\n",
-    "    test_forward.py\n",
-    "    test_backward.py\n",
-    "    test_optimize.py\n",
-    "    test_rootfinding.py\n",
-    "    test_plot.py   \n",
-    "    \n",
-    "docs/\n",
-    "\n",
-    "    milestone1.ipynb\n",
-    "    milestone2.ipynb\n",
-    "    documentat.ipynb\n",
-    "    \n",
-    ".gitignore\n",
-    ".travis.yml\n",
-    "LICENSE.txt\n",
-    "README.md\n",
-    "requirements.txt\n",
-    "setup.cfg\n",
-    "setup.py\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The source codes lies in the directory `autodiff`, in which the `__init__.py` is there to make `autodiff` a package. The file `forward.py` contains the source code of forward mode autodifferentiation. The file `backward.py` contains the source code of backward mode autodifferentiation. The file `optimize.py` contains optimization routines built on top of autodifferentiation. The file `rootfinding.py` contains rootfinding routines. The file `plot.py` contains utility functions for plotting.\n",
-    "\n",
-    "The test suites lies in the directory `tests`. The test files are named to represent the module that they test.\n",
-    "\n",
-    "The documents lies in the directory `docs`. `milestone1.ipynb` is the history version of document when submitting milestone 1. `milestone2.ipynb` is the history version of document when submitting milestone 2. `document.ipynb`, which is this file itself, is the final document.\n",
-    "\n",
-    "Other files in the rrot directory includes: `.gitignore`, which specifies the files that should not be tracked by git, `.travis.yml`, which is the configuration file for TravisCI, `LICENSE.txt`, which is the license for this package, `README.md`, which is the README file for this package, `requirements.txt`, which specifies the dependensies of this package, `setup.cfg`, which is the configuration file for installing this package, `setup.py`, which is the script for installing this package."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modules"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are now five modules: `autodiff.forward` for forward mode autodifferentiation, `backward` for backward mode autodifferentiation, `optimize` for optimization, `rootfinding` for rootfinding, and `plot` for plotting."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Test Automation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The continuous integration is done by `TravisCI` and `Coveralls`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`autodiff ` is distributed with `PyPI`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "## Implementation Details"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### High-level Design"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Core Functions: Static Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The centural data structure in `autodiff` are `Expression` and `ElementaryFunction` (which is the common interface shared by `Add`, `Mul`, `Pow`, `Exp`, `Sin`...). `Expression` represents a mathematical expression. It is composed of one `ElementaryFunction`  plus two sub-`Expression`'s. `Expression` has two child class: `Variable`, which represents a 'base' variable and `Constant`, which represents a constant."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/fig2.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Core Functions: Dynamic Behavior"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When a `Expression`'s `derivative_at` method is called, it will pass its sub-`Expression`('s) to the `ElementaryFunction`'s `derivative_at` method. `ElementaryFunction`'s `derivative_at` method will then compute the derivative based on chain rule. In this process, the `ElementaryFunction` will need the values and derivatives of the sub-`Expression`(s), so it will call the `evaluation_at` method and `derivative_at` method of the sub-`Expression`('s), and use the returned value to calculate the derivative. In other words, `Expression` and `ElementaryFunctions` will be calling each other recursively, until the base of this recursive process is reached. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/fig3.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The base of this recursive process lies in the `Constant` class and the `Variable` class. When a `Constant` is called to give its derivative, it returns 0. When a `Variable` is called to give its derivative, it checks whether itself is the variable to be taken derivative with respect of, if yes, then it returns 1.0, otherwisem it returns 0.0."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/fig4.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### On Second Order derivatives"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The implementation of second order derivative is conceptually very similar to the implementation of first order derivative, except that it implements a different chain rule. The knowledge of the chain rule is encompassed within the `derivative_at` method of `ElementaryFunction`. Because all the `ElementaryFunction`s involves either one or two sub-`Expression`, the Faà di Bruno's formula is actually much less frightening to implement than it seems in the following figure."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/fig5.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Core Classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The core class of `autodiff` is `Expression` and its child classes (`Variable` and `Constant`). They share the same interface: all implements their own `evaluation_at` and `derivative_at` methods. The dunder methods of `Expression` is overridden so that any operation on `Expression` will also return an `Expression`. `Variable` and `Constant` inherites these dunder methods so that they have the same behavior as `Expression`.\n",
-    "\n",
-    "`Expression` is composed of one `ElementaryFunction` and two sub-`Expression`s. `ElementaryFunction`s like `Sin`, `Exp` and `Add` implements the chain rule associated with the corresponding elementary function. Note that `sin` and `exp` are different from `Sin` and `Exp`. The former two are actually factory functions that returns a `Expression` which has `Sin` and `Exp` as its `ElementaryFunction`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### External Dependencies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`autodiff` depends on `numpy`. All of `autodiff`'s calculation is done in numpy for the efficiency and the advantage of vectorization. The `optimize` moduel depends on `scipy` for solving linear systems. The `plot` module depends on `matplotlib` for plotting."
    ]
   }
  ],
