Read the docs functions

--- a/docs/source/Libraries Demo.ipynb
+++ b/docs/source/Libraries Demo.ipynb
@@ -928,13 +928,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let take a closer look by deleted the very large value"
+    "Let take a closer look by excluding the very large value in the first few iterations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "hist_trim = hist[5:,:]"
