--- a/docs/source/Backprop_example.ipynb
+++ b/docs/source/Backprop_example.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,9 +23,10 @@
     "Backpropagation module is built upon the interfaces developed in central code file \"Autodiff.forward\".\n",
     "It calculate the derivative of each nodes in the compuational graph with respect to the root nodes. Therefore with different root nodes, we should expect to see different values of derivative.\n",
     "suppose we have the following structure:\n",
-    "+ x = 1, y = 2\n",
-    "+ c = sin(x)\n",
-    "+ d = c*y\n",
+    "\n",
+    " - $x = 1$, $y = 2$\n",
+    " - $c = \\sin(x)$\n",
+    " - $d = c \\cdot y$\n",
     "\n",
     "Note: after one round of back propagation, the .bder attributes stores the answer from the last round until it is cleared when a new round is called upon."
    ]
@@ -83,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result_d=newton_scalar(f,{x:1,y:-1},max_itr = 25,method = 'backward')"
@@ -113,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
