--- a/docs/source/Software Organization.ipynb
+++ b/docs/source/Software Organization.ipynb
@@ -23,6 +23,7 @@
     "autodiff/\n",
     "\n",
     "    __init__.py\n",
+    "    README.md\n",
     "    forward.py\n",
     "    backward.py\n",
     "    optimize.py\n",
@@ -30,7 +31,8 @@
     "    plot.py\n",
     "    \n",
     "tests/\n",
-    "\n",
+    "    \n",
+    "    README.md\n",
     "    test_forward.py\n",
     "    test_backward.py\n",
     "    test_optimize.py\n",
@@ -38,13 +40,18 @@
     "    test_plot.py   \n",
     "    \n",
     "docs/\n",
-    "\n",
+    "    \n",
+    "    README.md\n",
     "    milestone1.ipynb\n",
     "    milestone2.ipynb\n",
-    "    Getting Started.ipnb\n",
-    "    forward_demo.ipynb\n",
-    "    optimize_demo.ipynb\n",
-    "    \n",
+    "    source/\n",
+    "        Background.ipynb\n",
+    "        Getting Started.ipynb\n",
+    "        Implementation.ipynb\n",
+    "        index.rst\n",
+    "        License.rst\n",
+    "        Installation.ipynb\n",
+    "        Libraries_demo.ipynb\n",
     "    \n",
     ".gitignore\n",
     ".travis.yml\n",
