--- a/docs/source/Software Organization.ipynb
+++ b/docs/source/Software Organization.ipynb
@@ -49,9 +49,10 @@
     "        Getting Started.ipynb\n",
     "        Implementation.ipynb\n",
     "        index.rst\n",
-    "        License.rst\n",
     "        Installation.ipynb\n",
     "        Libraries_demo.ipynb\n",
+    "        Future Development.ipynb\n",
+    "        License.rst\n",
     "    \n",
     ".gitignore\n",
     ".travis.yml\n",
